# proj-text-to-visual

./: .gitignore  Dockerfile  pyproject.toml
src/: __init__.py
src/config/: __init__.py  env.py
test/: hello_word.ipynb
